--- a/image_dumper/map.html.haml
+++ b/image_dumper/map.html.haml
@@ -11,7 +11,17 @@
       function initialize() {
         var mapOptions = {
           center: new google.maps.LatLng(#{config['lat']}, #{config['lng']}),
-          zoom: 8
+          zoom: 18,
+          mapTypeId: google.maps.MapTypeId.SATELLITE,
+          tilt: 0,
+
+          mapTypeControl: false,
+          overviewMapControl: false,
+          panControl: false,
+          rotateControl: false,
+          scaleControl: false,
+          streetViewControl: false,
+          zoomControl: false,
         };
         var map = new google.maps.Map(document.getElementById("map-canvas"),
             mapOptions);
