--- a/demo/views/draw.haml
+++ b/demo/views/draw.haml
@@ -1,7 +1,8 @@
 - content_for :javascripts do
   :javascript
     var LAT = #{params[:lat]},
-        LNG = #{params[:lng]};
+        LNG = #{params[:lng]},
+        POINTS = #{@points.to_json};
 
   %script{src: "/javascripts/index.js", type: "text/javascript"}
 
