--- a/image_dumper/map.html.haml
+++ b/image_dumper/map.html.haml
@@ -23,8 +23,8 @@
           streetViewControl: false,
           zoomControl: false,
         };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
+        window.map = new google.maps.Map(document.getElementById("map-canvas"),
+                                         mapOptions);
       }
       google.maps.event.addDomListener(window, 'load', initialize);
   %body
