--- a/demo/views/draw.haml
+++ b/demo/views/draw.haml
@@ -9,4 +9,10 @@
 
 #content(role="main")
   .container
-    #map-canvas
+    .row
+      #map-canvas
+    .row
+      .pull-right
+        .btn.btn-primary Accept
+        .btn.btn-warning Edit
+        .btn.btn-danger Reject
