--- a/demo/views/layout.haml
+++ b/demo/views/layout.haml
@@ -20,7 +20,8 @@
       .container
         .navbar-header
           %a.navbar-brand(href="/")
-            DEMO
+            %h2
+              Polygon Auto Generator V1
 
     #content(role="main")
       .container
@@ -28,4 +29,6 @@
 
     #footer(role="contentinfo")
       .container
-        %p COPYRIGHT @ Factual Inc.
+        .row
+          .pull-right
+            &copy; Factual Inc.
