--- a/demo/public/stylesheets/main.css
+++ b/demo/public/stylesheets/main.css
@@ -1,4 +1,13 @@
+#content {
+  margin-top: 20px;
+}
+
 #map-canvas {
   width: 100%;
   height: 600px;
+  margin-bottom: 20px;
+}
+
+#footer {
+  margin-top: 20px;
 }
